@@ -199,7 +199,7 @@ static int do_fs_walk(fs9_file *dir, fs9_file *newfile, const char *path, int sk
 
         r = (*sendRecv)(txbuf, ptr, maxlen);
         if (txbuf[4] != r_walk && sentone) {
-            return -EINVAL;
+            return -ENOENT;
         }
 	sentone = 1;
     } while (*path);
