@@ -840,9 +840,14 @@ unsigned char sys_common_spin[] = {
   0x6e, 0x6f, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x67, 0x65, 0x74, 0x65, 0x72,
   0x72, 0x6e, 0x6f, 0x70, 0x74, 0x72, 0x28, 0x29, 0x3a, 0x20, 0x72, 0x3d,
   0x40, 0x6c, 0x6f, 0x6e, 0x67, 0x0a, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x66,
-  0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73, 0x79, 0x73, 0x2f,
-  0x63, 0x5f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x75, 0x70, 0x2e, 0x63, 0x22,
-  0x20, 0x5f, 0x63, 0x5f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x75, 0x70, 0x28,
-  0x29, 0x0a, 0x00
+  0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x63, 0x2f, 0x73, 0x74,
+  0x72, 0x69, 0x6e, 0x67, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x72, 0x72, 0x6f,
+  0x72, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x73, 0x74, 0x72, 0x65, 0x72, 0x72,
+  0x6f, 0x72, 0x28, 0x65, 0x3d, 0x6c, 0x6f, 0x6e, 0x67, 0x29, 0x3a, 0x20,
+  0x72, 0x3d, 0x73, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x0a, 0x0a, 0x70, 0x72,
+  0x69, 0x20, 0x66, 0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73,
+  0x79, 0x73, 0x2f, 0x63, 0x5f, 0x73, 0x74, 0x61, 0x72, 0x74, 0x75, 0x70,
+  0x2e, 0x63, 0x22, 0x20, 0x5f, 0x63, 0x5f, 0x73, 0x74, 0x61, 0x72, 0x74,
+  0x75, 0x70, 0x28, 0x29, 0x0a, 0x00
 };
-unsigned int sys_common_spin_len = 10130;
+unsigned int sys_common_spin_len = 10193;
